wasapi2sink: Choppy / stuttering audio
A lot of users are reporting choppy / stuttering audio with wasapi2sink, while there are no issues using directsoundsink and wasapisink with the same pipeline (https://github.com/strawberrymusicplayer/strawberry/issues/1227). I'm unable to reproduce this myself.
When Auto is selected, wasapi2sink is picked first because it is ranked as primary. Even though directsoundsink is part of good it is ranked as secondary, and wasapisink and wasapi2sink, part of bad is ranked primary, both having issues.